# trener

./: .gitignore  trener.code-workspace
BACKEND/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  migrate.py  pyproject.toml
BACKEND/app/: __init__.py  auth.py  config.py  db.py  dependencies.py  factory.py  sql_db.py
BACKEND/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
BACKEND/endpoints/: monthly_overview.py  root.py
BACKEND/tests/: conftest.py  test_auth.py  test_catalog_get_exercise_list.py  test_dashboard_get.py  test_dashboard_muscle_load_get.py  test_exercise_endpoints.py  test_exercise_series_post.py  test_exercises.py  test_exercises_api.py  test_exercises_db_schema.py  test_exercises_get_detail.py  test_exercises_get_list.py  test_exercises_series_put.py  test_fitness_math.py  test_health_get.py  test_migrate.py  test_muscle_load_service.py  test_muscle_map.py  test_seed_migration.py  test_trening_vezne_get.py  test_user_exercises_endpoints.py  test_user_exercises_service.py  test_user_settings.py  test_user_settings_get.py  test_user_settings_patch.py  test_users_email_unique_index.py  test_workout_sessions.py  test_workout_sessions_post.py  test_yearly_overview.py
MONGO_DB/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dump.py  manage.py  pyproject.toml  restore.py
MONGO_DB/migrations/: 20260425000001_schema_create_users_and_exercises.py  20260425000002_seed_default_exercises.py  20260425000003_transform_users_add_role.py  20260502070000_schema_ensure_users_email_unique_index.py  20260502080000_seed_exercise_pushups_level_one.py  20260502090000_seed_exercises_level_one_batch.py  20260503000001_add_physical_coefficients.py  20260503100000_schema_create_workout_sessions.py  20260504000000_seed_pushups_level_one_with_images.py  20260504010000_seed_squats_level_one_with_images.py  20260504020000_seed_pullups_level_one_with_images.py  20260504030000_seed_legraises_level_one_with_images.py  20260504040000_seed_bridges_level_two.py  20260506000000_transform_exercises_rename_id_to_name_and_name_to_title.py  20260506010000_transform_exercises_descriptions_markdown_level_one.py  20260506020000_transform_exercises_remove_instructions.py  20260506030000_transform_exercises_descriptions_append_technique_level_one.py  20260506040000_seed_hspu_level_one_with_images.py  20260506050000_seed_bridges_level_one_with_images.py  20260506060000_seed_bridges_level_two_with_images.py  20260506070000_schema_create_user_achievements.py  20260507000000_schema_create_user_exercises.py  20260508120000_initial_schema_and_seed_exercises.py  (+3 more)
SQL_DB/: .env.example  README.md  manage.py  pyproject.toml
(+134 files in other folders)
