[project]
name = "backend"
version = "0.1.0"
description = "Trener backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
