[project]
name = "backend"
version = "0.1.0"
description = "Trener backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.6",
    "motor>=3.6",
    "pymongo>=4.10",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "sentry-sdk[fastapi]>=2.59.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "mongomock-motor>=0.0.21",
    "mongomock>=4.3",
    "mongodb-migrations>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]
