[project]
name = "trener-mongo-db"
version = "0.1.0"
description = "Trener MongoDB schema, seed and transform migrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mongodb-migrations>=1.3",
    "pymongo>=4.7",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "mongomock>=4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
