[project]
name = "trener-sql-db"
version = "0.1.0"
description = "Trener PostgreSQL schema migrations and seed loaders"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yoyo-migrations>=8.2",
    "psycopg2-binary>=2.9",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
